--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -21,4 +21,4 @@ jobs:
         username: ${{ secrets.FTP_USER }}     # GitHub Secrets
         password: ${{ secrets.FTP_PASS }}
         local-dir: ./                         # 레포지토리 안에 보여줄 index파일 위치
-        server-dir: /www/starbucks/           # 카페24의 업로드 폴더
+        server-dir: /www/starbucks/           # 카페24의 업로드 폴더 위치
