--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -23,3 +23,6 @@ jobs:
         local-dir: ./                         # 레포지토리 안에 보여줄 index파일 위치
         server-dir: /www/starbucks-test/           # 카페24의 업로드 폴더 위치
         dangerous-clean-slate: true           #server-dir에 있는 파일들을 비우고 새로 업로드 함!
+        exclude: |
+          **/.DS_Store
+        timeout: 60000
