--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -22,7 +22,7 @@ jobs:
         password: ${{ secrets.FTP_PASS }}
         local-dir: ./                         # 레포지토리 안에 보여줄 index파일 위치
         server-dir: /www/starbucks/           # 카페24의 업로드 폴더 위치
-        dangerous-clean-slate: true           #server-dir에 있는 파일들을 비우고 새로 업로드 함
+        dangerous-clean-slate: false           # server-dir에 있는 파일들을 비우고 새로 업로드 함
         exclude: |
           **/.git/**
           **/.github/**
@@ -30,5 +30,3 @@ jobs:
           **/node_modules/**
           **/.vscode/**
           **/.env
-        timeout: 60000
-        log-level: verbose
